--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
 
     <body>
-        Hello
+        Hello I've added some examples
 
         <a href="nasaPictureDay\index.html">NASA Picture of Day</a>
     </body>
