--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     </title>
 
     <body>
-        Hello I've added some examples
+        <h1>Some basic examples of using Fetch API</h1>>
 
+        <a href="FetchApiBasic\index.html">NASA Picture of Day</a>
         <a href="nasaPictureDay\index.html">NASA Picture of Day</a>
+        <a href="RandomUser\index.html">Random User</a>
+        <a href="periodicTable\index.html">Periodic Table</a>
     </body>
 
 </html>
