--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <body>
         <h1>Some basic examples of using Fetch API</h1>>
-        
 
-        <a href="FetchApiBasic\index.html">NASA Picture of Day</a>
+
+        <a href="FetchApiBasic\index.html">Basic Fetch API</a>
         <BR>
         <a href="nasaPictureDay\index.html">NASA Picture of Day</a>
         <BR>
