--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     </title>
 
     <body>
-        <h1>Some basic examples of using Fetch API</h1>>
-
-
-        <a href="FetchApiBasic\index.html">Basic Fetch API</a>
-        <BR>
+        <h1>Some basic examples of using Fetch API</h1>
+        
         <a href="nasaPictureDay\index.html">NASA Picture of Day</a>
         <BR>
         <a href="RandomUser\index.html">Random User</a>
